upgrade menu top 5s and their text/top menu items fonts/text

--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -145,9 +145,11 @@
                 <button type="button" data-toggle="modal" data-target="#weekModal" class="mobile-menu dropdown">Choose Position</button>
                 <div data-target="#carouselTop5Players" data-slide-to="0" class="mobile-menu active">
                   <div class="number">
-                    <p class="rank-player-top5">1</p>
+                    <p class="rank-player-top5 nr1">1</p>
                   </div>
-                  <p class="name-top5">Matt Ryan1</p>
+                  <div class="name-fix">
+                    <p class="name-top5">Matt Ryan1</p>
+                  </div>
                 </div>
               </div>
               <div class="row">
@@ -155,13 +157,17 @@
                   <div class="number">
                     <p class="rank-player-top5">2</p>
                   </div>
-                  <p class="name-top5">Matt Ryan2</p>
+                  <div class="name-fix">
+                    <p class="name-top5">Matt Ryan2</p>
+                  </div>
                 </div>
                 <div data-target="#carouselTop5Players" data-slide-to="2" class="mobile-menu active">               
                   <div class="number">
                     <p class="rank-player-top5">3</p>
                   </div>
-                  <p class="name-top5">Matt Ryan3</p>
+                  <div class="name-fix">
+                    <p class="name-top5">Matt Ryan3</p>
+                  </div>
                 </div>
               </div>
               <div class="row">
@@ -169,13 +175,17 @@
                   <div class="number">
                     <p class="rank-player-top5">4</p>
                   </div>
-                  <p class="name-top5">Matt Ryan4</p>
+                  <div class="name-fix">
+                    <p class="name-top5">Matt Ryan4</p>
+                  </div>
                 </div>
                 <div data-target="#carouselTop5Players" data-slide-to="4" class="mobile-menu active">               
                   <div class="number">
                     <p class="rank-player-top5">5</p>
                   </div>
-                  <p class="name-top5">Matt Ryan5</p>
+                  <div class="name-fix">
+                    <p class="name-top5">Matt Ryan5</p>
+                  </div>
                 </div>
               </div>
               <div id="top5-player-content" class="tab-content">
@@ -462,37 +472,47 @@
                 <button type="button" data-toggle="modal" data-target="#weekModal" class="mobile-menu dropdown">Choose Week</button>
                 <div data-target="#carouselTop5Managers" data-slide-to="0" class="mobile-menu active">
                   <div class="number">
-                    <p class="rank-manager-top5">1</p>
+                    <p class="rank-player-top5 nr1">1</p>
                   </div>
-                  <p class="name-top5">Matt Ryan1</p>
+                  <div class="name-fix">
+                    <p class="name-top5">Matt Ryan1</p>
+                  </div>
                 </div>
               </div>
               <div class="row">
                 <div data-target="#carouselTop5Managers" data-slide-to="1" class="mobile-menu active">               
                   <div class="number">
-                    <p class="rank-manager-top5">2</p>
+                    <p class="rank-player-top5">2</p>
                   </div>
-                  <p class="name-top5">Matt Ryan2</p>
+                  <div class="name-fix">
+                    <p class="name-top5">Matt Ryan1</p>
+                  </div>
                 </div>
                 <div data-target="#carouselTop5Managers" data-slide-to="2" class="mobile-menu active">               
                   <div class="number">
-                    <p class="rank-manager-top5">3</p>
+                    <p class="rank-player-top5">3</p>
                   </div>
-                  <p class="name-top5">Matt Ryan3</p>
+                  <div class="name-fix">
+                    <p class="name-top5">Matt Ryan1</p>
+                  </div>
                 </div>
               </div>
               <div class="row">
                 <div data-target="#carouselTop5Managers" data-slide-to="3" class="mobile-menu active">               
                   <div class="number">
-                    <p class="rank-manager-top5">4</p>
+                    <p class="rank-player-top5">4</p>
                   </div>
-                  <p class="name-top5">Matt Ryan4</p>
+                  <div class="name-fix">
+                    <p class="name-top5">Matt Ryan1</p>
+                  </div>
                 </div>
                 <div data-target="#carouselTop5Managers" data-slide-to="4" class="mobile-menu active">               
                   <div class="number">
-                    <p class="rank-manager-top5">5</p>
+                    <p class="rank-player-top5">5</p>
                   </div>
-                  <p class="name-top5">Matt Ryan5</p>
+                  <div class="name-fix">
+                    <p class="name-top5">Matt Ryan1</p>
+                  </div>
                 </div>
               </div>
               <div id="top5-manager-content" class="tab-content">
