--- a/markup/_dist/enter_contests.html
+++ b/markup/_dist/enter_contests.html
@@ -453,7 +453,7 @@
                   <thead>
                     <tr>
                       <th> 
-                        <button class="btn btn-primary payout">Payout</button>
+                        <button type="button" data-toggle="modal" data-target="#payoutModal" class="btn btn-primary payout">Payout</button>
                       </th>
                     </tr>
                   </thead>
@@ -463,6 +463,82 @@
           </div>
         </div>
       </section>
+      <div id="payoutModal" role="dialog" data-backdrop="static" data-keyboard="false" class="modal fade">
+        <div class="row">
+          <div class="col-4 offset-4">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="row">
+                  <div class="col-10 offset-1">
+                    <h4 class="modal-title orange"><span>Payout Structure</span></h4>
+                  </div>
+                  <div class="exit-button"> 
+                    <button type="button" data-dismiss="modal" class="close">×</button>
+                  </div>
+                </div>
+                <div class="modal-body">
+                  <div class="row"> 
+                    <div class="col-8 offset-2">
+                      <div class="row">
+                        <div class="col-1 payout-rank">  
+                          <p>1.</p>
+                        </div>
+                        <div class="col-6"> 
+                          <p class="inline">100%</p>
+                          <p class="inline orange">of total</p>
+                        </div>
+                        <div class="col-5">  
+                          <p class="inline">30000</p>
+                          <p class="inline orange">NLC2</p>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-1 payout-rank">  
+                          <p>2.</p>
+                        </div>
+                        <div class="col-6"> 
+                          <p class="inline">80%</p>
+                          <p class="inline orange">of total</p>
+                        </div>
+                        <div class="col-5">  
+                          <p class="inline">30000</p>
+                          <p class="inline orange">NLC2</p>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-1 payout-rank">  
+                          <p>3.</p>
+                        </div>
+                        <div class="col-6"> 
+                          <p class="inline">60%</p>
+                          <p class="inline orange">of total</p>
+                        </div>
+                        <div class="col-5">  
+                          <p class="inline">30000</p>
+                          <p class="inline orange">NLC2</p>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-1 payout-rank">  
+                          <p>4.</p>
+                        </div>
+                        <div class="col-6"> 
+                          <p class="inline">30%</p>
+                          <p class="inline orange">of total</p>
+                        </div>
+                        <div class="col-5">  
+                          <p class="inline">30000</p>
+                          <p class="inline orange">NLC2</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <div id="enterContestsModal" tabindex="-1" role="dialog" aria-labelledby="registrationModalLabel" aria-hidden="true" class="modal fade">
       <div role="document" class="modal-dialog">
