--- a/markup/_dist/login.html
+++ b/markup/_dist/login.html
@@ -12,73 +12,75 @@
     <link rel="stylesheet" href="assets/css/fixes.css">
   </head>
   <body>
-    <!--include _partials/preloader.jade-->
-    <!--Navigation Fixed Block-->
-    <header class="nl-header">
-      <div class="nl-header--top">
-        <div class="container-fluid">
-          <div class="row align-items-start">
-            <div class="col-4 col-lg-2">
-              <div class="nl-logotype"><a href="index.html"><img src="assets/img/logotype.png" alt="NO Limit"></a></div>
-            </div>
-            <div class="col-1 col-lg-7">
-              <div class="nl-title">The worlds first crypto fantasy sports</div>
-            </div>
-            <div class="col-12 col-lg-3">
-              <div class="nl-button-login">
-                <button type="button" data-toggle="modal" data-target="#loginModal" class="btn btn-primary nl-m-r-15">Login</button>
-                <button type="button" data-toggle="modal" data-target="#registrationModal" class="btn">SIGN UP</button>
+    <div class="nl-wrapper">
+      <!--include _partials/preloader.jade-->
+      <!--Navigation Fixed Block-->
+      <header class="nl-header">
+        <div class="nl-header--top">
+          <div class="container-fluid">
+            <div class="row align-items-start">
+              <div class="col-4 col-lg-2">
+                <div class="nl-logotype"><a href="index.html"><img src="assets/img/logotype.png" alt="NO Limit"></a></div>
               </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
-    <main>
-      <section class="nl-section login-wrapper">
-        <div class="row center-div">
-          <div class="col-2 col-sm-3 col-md-3 col-lg-3 col-xl-3"></div>
-          <div class="col-8 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-            <div id="loginSection" tabindex="-1" role="dialog" aria-labelledby="loginSectionLabel" aria-hidden="true">
-              <div role="document" class="block-dialog"></div>
-              <div class="block-content">
-                <div class="block-header">
-                  <h2 id="loginSectionLabel" class="modal-title">Login</h2>
-                </div>
-                <div class="block-body">
-                  <form class="form-signin">
-                    <div class="input-group">
-                      <input id="inputEmail" type="email" placeholder="SCREEN NAME OR EMAIL" required="" autofocus="" class="form-control">
-                    </div>
-                    <div class="input-group">
-                      <input type="password" placeholder="PASSWORD" aria-describedby="show" class="form-control"><span class="show-password input-group-addon">show</span>
-                    </div>
-                    <button class="btn btn-primary">LOGIN</button>
-                    <p class="forget-password">FORGOT PASSWORD</p><div class="g-recaptcha" data-sitekey="6Lf-kjMUAAAAALqIEnd5dP1T-hQbpXOBPLd1ilJD"></div>
-                  </form>
+              <div class="col-1 col-lg-7">
+                <div class="nl-title">The worlds first crypto fantasy sports</div>
+              </div>
+              <div class="col-12 col-lg-3">
+                <div class="nl-button-login">
+                  <button type="button" data-toggle="modal" data-target="#loginModal" class="btn btn-primary nl-m-r-15">Login</button>
+                  <button type="button" data-toggle="modal" data-target="#registrationModal" class="btn">SIGN UP</button>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-2 col-sm-3 col-md-3 col-lg-3 col-xl-3"></div>
         </div>
-      </section>
-    </main>
-    <!--Footer Block-->
-    <footer class="nl-footer">
-      <div class="nl-footer--button">
-        <div class="row">
-          <div class="col-lg-8">
-            <div class="nl-social-icon"><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a><a class="btn btn-charity"><span>Charity<br>Projects</span></a></div>
-            <p><br />Copyright © 2017 No Limit Fantasy Sports, LLC All Rights Reserved Contest Rules, Terms and Conditions and Privacy Policy<br /></p>
+      </header>
+      <main>
+        <section class="nl-section login-wrapper">
+          <div class="row center-div">
+            <div class="col-2 col-sm-3 col-md-3 col-lg-3 col-xl-3"></div>
+            <div class="col-8 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+              <div id="loginSection" tabindex="-1" role="dialog" aria-labelledby="loginSectionLabel" aria-hidden="true">
+                <div role="document" class="block-dialog"></div>
+                <div class="block-content">
+                  <div class="block-header">
+                    <h2 id="loginSectionLabel" class="modal-title">Login</h2>
+                  </div>
+                  <div class="block-body">
+                    <form class="form-signin">
+                      <div class="input-group">
+                        <input id="inputEmail" type="email" placeholder="SCREEN NAME OR EMAIL" required="" autofocus="" class="form-control">
+                      </div>
+                      <div class="input-group">
+                        <input type="password" placeholder="PASSWORD" aria-describedby="show" class="form-control"><span class="show-password input-group-addon">show</span>
+                      </div>
+                      <button class="btn btn-primary">LOGIN</button>
+                      <p class="forget-password">FORGOT PASSWORD</p><div class="g-recaptcha" data-sitekey="6Lf-kjMUAAAAALqIEnd5dP1T-hQbpXOBPLd1ilJD"></div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-2 col-sm-3 col-md-3 col-lg-3 col-xl-3"></div>
           </div>
-          <div class="col-lg-4 nl-tar">
-            <div class="input-group-btn"><a href="#" class="btn btn-footer">Helpdesk</a><a href="contact.html" class="btn btn-footer">Contact Us</a></div>
-            <div class="input-group-btn"><a href="faq.html" class="btn btn-footer">Faq</a><a href="terms_conditions.html" class="btn btn-footer">Terms & Conditions</a></div>
+        </section>
+      </main>
+      <!--Footer Block-->
+      <footer class="nl-footer">
+        <div class="nl-footer--button">
+          <div class="row">
+            <div class="col-lg-8">
+              <div class="nl-social-icon"><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a><a class="btn btn-charity"><span>Charity<br>Projects</span></a></div>
+              <p><br />Copyright © 2017 No Limit Fantasy Sports, LLC All Rights Reserved Contest Rules, Terms and Conditions and Privacy Policy<br /></p>
+            </div>
+            <div class="col-lg-4 nl-tar">
+              <div class="input-group-btn"><a href="#" class="btn btn-footer">Helpdesk</a><a href="contact.html" class="btn btn-footer">Contact Us</a></div>
+              <div class="input-group-btn"><a href="faq.html" class="btn btn-footer">Faq</a><a href="terms_conditions.html" class="btn btn-footer">Terms & Conditions</a></div>
+            </div>
           </div>
         </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
     <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&amp;render=explicit" async="" defer=""></script>
     <script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="assets/js/owl.carousel.min.js"></script>
