new helmet image structue

--- a/markup/_dist/live_score.html
+++ b/markup/_dist/live_score.html
@@ -624,7 +624,8 @@
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
-                  <div data-position="DEF" class="nl-player-block nl-DEF-position"><img src="assets/img/helmet-3" alt="logo">
+                  <div data-position="DEF" class="nl-player-block nl-DEF-position">
+                    <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
                     <div class="nl-player-block--data">
                       <p class="not-playing">PATRIOTS</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
@@ -769,7 +770,9 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb">
+                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                        </div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -889,7 +892,9 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb">
+                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                        </div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -1009,7 +1014,9 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb">
+                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                        </div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -1129,7 +1136,9 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb">
+                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                        </div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -1249,7 +1258,9 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb">
+                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                        </div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -1369,7 +1380,9 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb">
+                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                        </div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -1489,7 +1502,9 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb">
+                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                        </div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -1609,7 +1624,9 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb">
+                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                        </div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -1729,7 +1746,9 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb">
+                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                        </div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -1849,7 +1868,9 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb">
+                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                        </div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -1969,7 +1990,9 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb">
+                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                        </div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -2089,7 +2112,9 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb">
+                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                        </div>
                       </div>
                       <table class="table table-info3">
                         <thead>
