--- a/markup/_dist/my_teams.html
+++ b/markup/_dist/my_teams.html
@@ -124,7 +124,8 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>team NLC2</p><img src="assets/img/helmet-2" alt="helmet">
+                      <p>team NLC2</p>
+                      <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
                     </div>
                   </div>
                 </div>
@@ -233,7 +234,8 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>team NLC2</p><img src="assets/img/helmet-3" alt="helmet">
+                      <p>team NLC2</p>
+                      <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
                     </div>
                   </div>
                 </div>
@@ -342,7 +344,8 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>team NLC2</p><img src="assets/img/helmet-2" alt="helmet">
+                      <p>team NLC2</p>
+                      <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
                     </div>
                   </div>
                 </div>
@@ -451,7 +454,8 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>team NLC2</p><img src="assets/img/helmet-3" alt="helmet">
+                      <p>team NLC2</p>
+                      <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
                     </div>
                   </div>
                 </div>
@@ -560,7 +564,8 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>team NLC2</p><img src="assets/img/helmet-2" alt="helmet">
+                      <p>team NLC2</p>
+                      <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
                     </div>
                   </div>
                 </div>
@@ -669,7 +674,8 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>team NLC2</p><img src="assets/img/helmet-3" alt="helmet">
+                      <p>team NLC2</p>
+                      <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
                     </div>
                   </div>
                 </div>
@@ -778,7 +784,8 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>team NLC2</p><img src="assets/img/helmet-2" alt="helmet">
+                      <p>team NLC2</p>
+                      <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
                     </div>
                   </div>
                 </div>
@@ -887,7 +894,8 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>team NLC2</p><img src="assets/img/helmet-3" alt="helmet">
+                      <p>team NLC2</p>
+                      <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
                     </div>
                   </div>
                 </div>
