--- a/markup/_dist/football_enter_contests.html
+++ b/markup/_dist/football_enter_contests.html
@@ -196,7 +196,8 @@
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="DEF" class="nl-player-block nl-DEF-position"><img src="assets/img/helmet-3" alt="logo">
+                  <div data-position="DEF" class="nl-player-block nl-DEF-position">
+                    <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
                     <div class="nl-player-block--data">
                       <p>PATRIOTS</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
@@ -209,7 +210,8 @@
                   <div class="row">
                     <div class="col-12">
                       <div class="nl-team-card table-data-field">
-                        <h3>team NLC2</h3><img src="assets/img/helmet.png" alt="helmet" class="helmet-team">
+                        <h3>team NLC2</h3>
+                        <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
                       </div>
                     </div>
                   </div>
