--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -611,11 +611,13 @@
                                                     <h3>Score: 123</h3>
                                                   </div>
                                                   <div class="col-12 no-padding">
-                                                    <h3>The best NLC2 team!</h3>
+                                                    <h3>The best NLC2 team!!</h3>
                                                   </div>
                                                 </div>
                                                 <div class="row"> 
-                                                  <div class="col-10"><img src="assets/img/helmet.png" alt="helmet" class="helmet"></div>
+                                                  <div class="col-10">
+                                                    <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                                                  </div>
                                                 </div>
                                               </div>
                                             </div>
@@ -739,7 +741,9 @@
                                                   </div>
                                                 </div>
                                                 <div class="row"> 
-                                                  <div class="col-10"><img src="assets/img/helmet.png" alt="helmet" class="helmet"></div>
+                                                  <div class="col-10">
+                                                    <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                                                  </div>
                                                 </div>
                                               </div>
                                             </div>
@@ -863,7 +867,9 @@
                                                   </div>
                                                 </div>
                                                 <div class="row"> 
-                                                  <div class="col-10"><img src="assets/img/helmet.png" alt="helmet" class="helmet"></div>
+                                                  <div class="col-10">
+                                                    <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                                                  </div>
                                                 </div>
                                               </div>
                                             </div>
@@ -987,7 +993,9 @@
                                                   </div>
                                                 </div>
                                                 <div class="row"> 
-                                                  <div class="col-10"><img src="assets/img/helmet.png" alt="helmet" class="helmet"></div>
+                                                  <div class="col-10">
+                                                    <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                                                  </div>
                                                 </div>
                                               </div>
                                             </div>
@@ -1111,7 +1119,9 @@
                                                   </div>
                                                 </div>
                                                 <div class="row"> 
-                                                  <div class="col-10"><img src="assets/img/helmet.png" alt="helmet" class="helmet"></div>
+                                                  <div class="col-10">
+                                                    <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                                                  </div>
                                                 </div>
                                               </div>
                                             </div>
@@ -1311,7 +1321,8 @@
                             <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
-                        <div data-position="DEF" class="nl-player-block nl-DEF-position"><img src="assets/img/helmet-3" alt="logo">
+                        <div data-position="DEF" class="nl-player-block nl-DEF-position">
+                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
                           <div class="nl-player-block--data">
                             <p>PATRIOTS</p>
                             <p class="data orange"><span>12.67</span> <span>$42000</span>			</p>
@@ -1327,7 +1338,8 @@
                           <div class="row">
                             <div class="col-12 no-padding">
                               <div class="nl-team-card table-data-field">
-                                <h3>team NLC2</h3><img src="assets/img/helmet.png" alt="helmet" class="helmet">
+                                <h3>team NLC2</h3>
+                                <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
                               </div>
                             </div>
                           </div>
