--- a/markup/_dist/my_contests.html
+++ b/markup/_dist/my_contests.html
@@ -202,7 +202,7 @@
                               </div>
                             </div>
                             <div class="card">
-                              <div role="tab" id="heading2" class="card-header"><a data-toggle="collapse" data-parent="#accordion" href="#collapse2" aria-expanded="true" aria-controls="collapse2" class="collapsed">
+                              <div role="tab" id="headingOne" class="card-header"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="collapsed">
                                   <div class="row">
                                     <div class="col-6">
                                       <p>10/12 00:00</p>
@@ -213,7 +213,7 @@
                                       <p>0</p>
                                     </div>
                                   </div></a></div>
-                              <div id="collapse2" role="tabpanel" aria-labelledby="headingOne" class="collapse">
+                              <div id="collapseOne" role="tabpanel" aria-labelledby="headingOne" class="collapse">
                                 <div class="card-block">
                                   <div class="row align-items-center">
                                     <div class="col-6">
