Football top 5 now img instead of background cover

--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -416,7 +416,7 @@
                             <li class="nav-item"><a data-target="#carouselTop5Managers" href="" data-slide-to="0" class="active">
                                 <div class="menu-item top-5">
                                   <div class="players"> 
-                                    <div class="manager-thumbnail manager-1"></div>
+                                    <div id="top5-managers-nav" style="display: block;"><img id="top-manager-nav" src="assets/img/about/person1.png" style="display: block;"></div>
                                     <div class="number">
                                       <p>1</p>
                                     </div>
@@ -428,7 +428,7 @@
                             <li class="nav-item"><a data-target="#carouselTop5Managers" href="" data-slide-to="1">
                                 <div class="menu-item top-5">
                                   <div class="players"> 
-                                    <div class="manager-thumbnail manager-2"></div>
+                                    <div id="top5-managers-nav" style="display: block;"><img id="top-manager-nav" src="assets/img/about/person1.png" style="display: block;"></div>
                                     <div class="number">
                                       <p>2</p>
                                     </div>
@@ -440,7 +440,7 @@
                             <li class="nav-item"><a data-target="#carouselTop5Managers" href="" data-slide-to="2">
                                 <div class="menu-item top-5">
                                   <div class="players"> 
-                                    <div class="manager-thumbnail manager-3"></div>
+                                    <div id="top5-managers-nav" style="display: block;"><img id="top-manager-nav" src="assets/img/about/person1.png" style="display: block;"></div>
                                     <div class="number">
                                       <p>3</p>
                                     </div>
@@ -452,7 +452,7 @@
                             <li class="nav-item"><a data-target="#carouselTop5Managers" href="" data-slide-to="3">
                                 <div class="menu-item top-5">
                                   <div class="players"> 
-                                    <div class="manager-thumbnail manager-4"></div>
+                                    <div id="top5-managers-nav" style="display: block;"><img id="top-manager-nav" src="assets/img/about/person1.png" style="display: block;"></div>
                                     <div class="number">
                                       <p>4</p>
                                     </div>
@@ -464,7 +464,7 @@
                             <li class="nav-item"><a data-target="#carouselTop5Managers" href="" data-slide-to="4">
                                 <div class="menu-item top-5">
                                   <div class="players"> 
-                                    <div class="manager-thumbnail manager-5"></div>
+                                    <div id="top5-managers-nav" style="display: block;"><img id="top-manager-nav" src="assets/img/about/person1.png" style="display: block;"></div>
                                     <div class="number">
                                       <p>5</p>
                                     </div>
