--- a/markup/_dist/index.html
+++ b/markup/_dist/index.html
@@ -24,37 +24,33 @@
               <div class="nl-title">The worlds first crypto fantasy sports</div>
             </div>
             <div class="col-12 col-lg-3">
-              <div class="nl-btutton-login"><a href="login.html" class="btn btn-primary nl-m-r-15">Login</a><a href="register.html" class="btn">SIGN UP</a></div>
+              <div class="nl-button-login"><a href="login.html" class="btn btn-primary nl-m-r-15">Login</a><a href="register.html" class="btn">SIGN UP</a></div>
             </div>
           </div>
         </div>
       </div>
       <div class="nl-header--slide">
         <div class="owl-carousel main-carousel">
-          <div class="item nl-slide">
+          <div class="item nl-slides nl-slide-1">
             <div class="container-fluid">
               <h1>Draft your line up with <br />no limit coins</h1>
               <div class="btn btn-primary btn-lg nl-m-t-40">SIGN UP</div>
             </div>
           </div>
-          <div class="item nl-slide">
-            <div class="container">
-              <h2>Draft your line up with <br />no limit coins</h2>
+          <div class="item nl-slides nl-slide-2">
+            <div class="container-fluid">
+              <h2>Daily Fantasy Football</h2>
               <div class="btn btn-primary btn-lg nl-m-t-40">SIGN UP</div>
             </div>
           </div>
-          <div class="item nl-slide">
-            <div class="container">
-              <h2>Draft your line up with <br />no limit coins</h2>
+          <div class="item nl-slides nl-slide-3">
+            <div class="container-fluid">
+              <h2>Daily Fantasy Soccer</h2>
               <div class="btn btn-primary btn-lg nl-m-t-40">SIGN UP</div>
             </div>
           </div>
-          <div class="item nl-slide">
-            <div class="container">
-              <h2>Draft your line up with <br />no limit coins</h2>
-              <div class="btn btn-primary btn-lg nl-m-t-40">SIGN UP</div>
-            </div>
-          </div>
+          
+          
         </div>
       </div>
     </header>
@@ -64,7 +60,6 @@
           <div class="row">
             <div class="col-md-12">
               <h2>sign up & start winning.</h2>
-              <div class="btn btn-primary">get 10 free nlc2 coins</div>
             </div>
           </div>
           <div class="row">
@@ -76,6 +71,9 @@
                 <h3>draft<br>your team</h3></a></div>
             <div class="col-6 col-lg-3 nl-start-win-block block4"><a href="#"><img alt="" src="assets/img/nl-start-win-block4.jpg">
                 <h3>win</h3></a></div>
+            <div class="col-6 offset-3 10-free-coins">
+              <div class="btn btn-primary 10-free-coins">get 10 free nlc2 coins</div>
+            </div>
           </div>
         </div>
       </section>
