--- a/markup/_dist/live_score.html
+++ b/markup/_dist/live_score.html
@@ -760,6 +760,17 @@
             </div>
           </div>
           <div class="row">
+            <div class="col-12 text-center">
+              <div class="nl-status-wrapper">
+                <ul>
+                  <li><span class="playing indicator"></span><span>Playing</span></li>
+                  <li><span class="played indicator"></span><span>Played</span></li>
+                  <li><span class="not-playing indicator"></span><span>Not Playing</span></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="row">
                   <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-lg-3 col-xl-2 small-padding-live-score">
                     <div class="nl-contest-info-table nl-live-score-contest-table">
                       <div class="rank">
