updated all pages for <img> from background cover

--- a/markup/_dist/index.html
+++ b/markup/_dist/index.html
@@ -33,24 +33,22 @@
         <div class="owl-carousel main-carousel">
           <div class="item nl-slides nl-slide-1">
             <div class="container-fluid">
-              <h1>Draft your line up with <br />no limit coins</h1>
-              <div class="btn btn-primary btn-lg nl-m-t-40">SIGN UP</div>
-            </div>
-          </div>
-          <div class="item nl-slides nl-slide-2">
-            <div class="container-fluid">
-              <h2>Daily Fantasy Football</h2>
+              <h1>Draft your line up <br /> with NLC2</h1>
               <div class="btn btn-primary btn-lg nl-m-t-40">SIGN UP</div>
             </div>
           </div>
           <div class="item nl-slides nl-slide-3">
             <div class="container-fluid">
-              <h2>Daily Fantasy Soccer</h2>
+              <h2>Daily Fantasy Soccer <br /> with NLC2</h2>
               <div class="btn btn-primary btn-lg nl-m-t-40">SIGN UP</div>
             </div>
           </div>
-          
-          
+          <div class="item nl-slides nl-slide-4">
+            <div class="container-fluid">
+              <h2>Fantasy Football with <br /> NLC2</h2>
+              <div class="btn btn-primary btn-lg nl-m-t-40">SIGN UP</div>
+            </div>
+          </div>
         </div>
       </div>
     </header>
