--- a/markup/_dist/homepage_soccer.html
+++ b/markup/_dist/homepage_soccer.html
@@ -142,7 +142,7 @@
                     <p class="rank-player-top5 nr1">1</p>
                   </div>
                   <div class="name-fix">
-                    <p class="name-top5">Rob Grownkowski</p>
+                    <p class="name-top5">R. Grownkowski</p>
                   </div>
                 </div>
               </div>
@@ -152,7 +152,7 @@
                     <p class="rank-player-top5">2</p>
                   </div>
                   <div class="name-fix">
-                    <p class="name-top5">Odell Beckham JR</p>
+                    <p class="name-top5">O. Beckham JR</p>
                   </div>
                 </div>
                 <div data-target="#carouselTop5Players" data-slide-to="2" class="mobile-menu active">               
@@ -160,7 +160,7 @@
                     <p class="rank-player-top5">3</p>
                   </div>
                   <div class="name-fix">
-                    <p class="name-top5">Matt Ryan</p>
+                    <p class="name-top5">M. Ryan</p>
                   </div>
                 </div>
               </div>
@@ -170,7 +170,7 @@
                     <p class="rank-player-top5">4</p>
                   </div>
                   <div class="name-fix">
-                    <p class="name-top5">Aaron Rodgers</p>
+                    <p class="name-top5">A. Rodgers</p>
                   </div>
                 </div>
                 <div data-target="#carouselTop5Players" data-slide-to="4" class="mobile-menu active">               
@@ -178,7 +178,7 @@
                     <p class="rank-player-top5">5</p>
                   </div>
                   <div class="name-fix">
-                    <p class="name-top5">David Johnson</p>
+                    <p class="name-top5">D. Johnson</p>
                   </div>
                 </div>
               </div>
